--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "server": "nodemon server",
+    "server": "nodemon index",
     "data:import": "node seeder",
     "data:destroy": "node seeder -d"
   },
