--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.19"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
